[package]
name = "lazy_async_pool"
version = "0.3.1"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "An asyncronous object pool that generates objects on the fly."
license = "MIT"
repository = "https://github.com/DR-BoneZ/lazy-async-pool-rs"
documentation = "http://docs.rs/lazy_async_pool"
readme = "README.md"

[features]
timeout = []

[dependencies]
futures = "0.3.5"
crossbeam-channel = "0.4.3"

[dev-dependencies]
tokio-postgres = "0.5.5"
tokio = "0.2.22"
failure = "0.1"